--- a/index.html
+++ b/index.html
@@ -219,7 +219,8 @@
         <p><em>Figure 3: Faults of drone type B. (a) propeller cut, (b) dented motor cap (red circle indicates dented part)</em></p>
 
         <h3>Noise addition</h3>
-        <p>To simulate real-flight conditions, drone sounds were mixed with background noise at a signal-to-noise ratio (SNR) of -5 to 5 dB. The background noise consists of recordings from three distinct outdoor locations (ponds, hills, and gates), as well as industrial noise from ToyADMOS Noise recorded in a real factory environment.</p>
+        <p>To simulate real-flight conditions, drone sounds were mixed with background noise at a signal-to-noise ratio (SNR) of -5 to 5 dB. The background noise consists of recordings from three distinct outdoor locations (ponds, hills, and gates), as well as <a href="https://zenodo.org/record/1227121">DEMAND Noise</a>, which includes noise from the park, town square, and traffic intersection environments.</p>
+
         <img src="figures/backgrounds.png" alt="Background noise recording locations">
         <p><em>Figure 4: Three different spots on the university campus chosen for background noise recording: (a) pond, (b) hill, and (c) gate.</em></p>
 
