--- a/index.html
+++ b/index.html
@@ -262,15 +262,15 @@
         
         <h4>Evaluation dataset</h4>
         <img src="figures/evaluation_dataset.png" width="80%" alt="Evaluation dataset">
-        <li> The number of types is <strong>60</strong> per drone type, movement direction, and anomaly type.</li>
-        <li> The total number of files is <strong>60 × 3 (drone types) × 6 (movement directions) = 1,080</strong>.</li>
+        <li> The number of files is <strong>60</strong> per drone type, moving direction, and fault type.</li>
+        <li> The total number of files is <strong>60 × 3 (drone types) × 6 (moving directions) = 1,080</strong>.</li>
         <li> <strong>MF</strong>: Motor Cap Fault</li>
         <li> <strong>PC</strong>: Propeller Cut</li>
         
         <h4>Test dataset</h4>
         <img src="figures/test_dataset.png" width="80%" alt="Test dataset">
-        <li> The number of types is <strong>80</strong> per drone type, movement direction, and anomaly type.</li>
-        <li> The total number of files is <strong>80 × 3 (drone types) × 6 (movement directions) = 1,440</strong>.</li>
+        <li> The number of files is <strong>80</strong> per drone type, moving direction, and fault type.</li>
+        <li> The total number of files is <strong>80 × 3 (drone types) × 6 (moving directions) = 1,440</strong>.</li>
     </section>
 
     <section>
