--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             width: 80%;
             border-collapse: collapse;
             margin-top: 20px;
+            text-align: center;
         }
 
         table, th, td {
