--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
     <section>
         <h2>&#128227; Key dates</h2>
-        <table>
+        <table border="1" style="width: 80%; margin: auto;">
             <tr>
                 <th>Event</th>
                 <th>Date</th>
