--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
         <h3>Dataset construction</h3>
         <p>The drones used in this study include the Holy Stone HS720 <strong>(Type A)</strong>, MJX Bugs 12 EIS <strong>(Type B)</strong>, and ZLRC SG906 Pro2 <strong>(Type C)</strong>.</p>
         <img src="figures/drones.png" width="90%" alt="Three drone types used for the experiment.">
-        <p style="text-align: center;"><em>Figure 1: Three drone types used for the experiment.<br>(a) Type A (Holy Stone HS720), (b) Type B (MJX Bugs 12 EIS), (c) Type C (ZLRC SG906 Pro2)</em></p>
+        <p style="text-align: center;"><em>Figure 1: Three drone types used for the experiment.(a) Type A (Holy Stone HS720), (b) Type B (MJX Bugs 12 EIS), (c) Type C (ZLRC SG906 Pro2)</em></p>
 
         <p>Drone sounds were recorded using a RØDE Wireless Go2 wireless microphone mounted on the top of the drone body. The sensitivity of the microphone was adjusted to prevent clipping even at high sound pressure levels. The recordings were conducted in an anechoic chamber to eliminate wall reflections.</p>
         <img src="figures/microphones.png" width="80%" alt="Røde Wireless Go2 microphones">
