--- a/index.html
+++ b/index.html
@@ -130,6 +130,9 @@
             font-size: 14px;
             color: #666;
         }
+        h4 {
+            text-align: center;
+        }
     </style>
 <script type="text/javascript" async
   src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/3.2.0/es5/tex-mml-chtml.js">
