--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             color: #666;
         }
         h4 {
-            text-align: center;
+            font-size: 17px;
         }
     </style>
 <script type="text/javascript" async
