--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
     
     <section>
         <h2>License</h2>
-            <p><img src="https://img.shields.io/badge/License-CC%20BY--SA%204.0-lightgrey.svg" alt="CC BY-SA 4.0" style="display: block; margin-left: 0;"></p>
+            <p>Shield:<img src="https://img.shields.io/badge/License-CC%20BY--SA%204.0-lightgrey.svg" alt="CC BY-SA 4.0" style="display: block; margin-left: 0;"></p>
             <p>This work is licensed under a
             <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.</p>
             <p><img src="https://licensebuttons.net/l/by-sa/4.0/88x31.png" alt="CC BY-SA 4.0" style="display: block; margin-left: 0;"></p>
