--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
 
         p {
             text-align: left;
+            line-height: 2.0; /* 줄 간격 조정 */
+            margin-bottom: 15px; /* 문단 간 공백 추가 */
         }
 
         table {
