--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
           <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub Repository" width="100">
           <div class="content-text">
               <a href="https://github.com/ICSV31AIchallenge/ICSV31-AI-Challenge" target="_blank">ICSV31 AI Challenge GitHub Repository</a>
-              <div class="content-details">Visit the official GitHub repository.</div>
+              <div class="content-details">This repository contains 2025 ICSV31 AI Challenge descriptions and baseline code.</div>
           </div>
       </div>
     </section>
