Update index.html logo

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ICSV31-AI-Challenge (2nd KSNVE AI Challenge)</title
+    <title>ICSV31-AI-Challenge (2nd KSNVE AI Challenge)</title>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
     <style>
         body {
@@ -142,7 +142,7 @@
 </head>
 <body>
     <header>
-        ICSV31-AI-Challenge (2nd KSNVE AI Challenge)
+       <img src="figures/AIClogo.png" width="100%" alt="ICSV31-AI-Challenge (2nd KSNVE AI Challenge)"> 
     </header>
 
     <section>
