--- a/index.html
+++ b/index.html
@@ -93,6 +93,10 @@
             display: block;
             margin: 10px auto;
         }
+        myImg {
+            max-width: 1000px;
+            max-height: 100%;
+        }
         .content-item {
             display: flex;
             align-items: center;
@@ -142,7 +146,7 @@
 </head>
 <body>
     <header>
-       <img src="figures/AIClogo.png" width="60%" alt="ICSV31-AI-Challenge (2nd KSNVE AI Challenge)"> 
+       <img id="myImg" src="figures/AIClogo.png" width="60%" alt="ICSV31-AI-Challenge (2nd KSNVE AI Challenge)"> 
     </header>
 
     <section>
