--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             display: block;
             margin: 10px auto;
         }
-        myImg {
+        #myImg {
             max-width: 1000px;
             max-height: 100%;
         }
