--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
         header {
             padding: 20px;
+            padding-bottom: 0px;
             background: linear-gradient(120deg, #4a90e2, #9013fe);
             color: #fff;
             font-size: 35px;
@@ -156,9 +157,9 @@
 
     <section>
         <h2>Overview</h2>
-        <p>The organizing committee of the ICSV31 conference hosts an AI Challenge focusing on diagnosing machine anomalies using acoustic signals.<br>
+        <p>The organizing committee of the <a href="https://icsv31.org/">ICSV31</a> conference hosts an AI Challenge focusing on diagnosing machine anomalies using acoustic signals.<br>
         Participants will train AI models on drone sound signals and identify anomalies from a provided dataset. A grand prize of <strong>1,500 USD</strong> will be awarded to the winning team.</p>
-        <p>Participation is team-based, and <em>at least one team member must be a registered attendee of the ICSV31 conference</em> at the time of model submission. The conference will also hold a dedicated workshop session for participating teams.</p>
+        <p>Participation is team-based, and <em>at least one team member must be a registered attendee of the <a href="https://icsv31.org/">ICSV31</a> conference</em> at the time of model submission. The conference will also hold a dedicated workshop session for participating teams.</p>
     </section>
 
     <section>
