--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 
     <section>
         <h2>1. Introduction</h2>
-        <p><strong>ICSV31-AI-Challenge</strong> aims to diagnose the state of drones by detecting anomalous sounds caused by mechanical failures in propellers and motors in noisy environments. In particular, drone sounds that vary depending on operational conditions, such as flight directions, along with background noise, make this task highly challenging.</p>
+        <p><strong>ICSV31-AI-Challenge (2nd KSNVE AI Challenge)</strong> aims to diagnose the state of drones by detecting anomalous sounds caused by mechanical failures in propellers and motors in noisy environments. In particular, drone sounds that vary depending on operational conditions, such as flight directions, along with background noise, make this task highly challenging.</p>
         <p>The ultimate goal of the competition is to develop anomaly detection models capable of identifying anomalies in drones using data collected under various conditions.</p>
         <ul>
             <li>Participants are required to train deep learning models detecting anomalous drone sounds in test data, through the model training using the training dataset.</li>
