--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             background: white;
             padding: 20px;
             border-radius: 10px;
-            max-width: 600px;
+            max-width: 700px;
             width: 90%;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
         }
@@ -203,7 +203,7 @@
     <div class="popup-overlay" id="schedulePopup">
     <div class="popup-content">
         <span class="popup-close" onclick="closePopup()">&times;</span>
-        <h3>&#128227; Key dates</h3>
+        <h3>&#128227; The Challenge Deadline Has Been Extended!</h3>
         <table border="1" style="width: 80%; margin: auto;">
             <tr>
                 <th>Event</th>
