--- a/index.html
+++ b/index.html
@@ -237,6 +237,56 @@
     </section>
 
     <section>
+        <h2>Challenge Results</h2>
+    
+        <h3>Total Results</h3>
+        <table style="width: 80%; margin: auto; border-collapse: collapse;" border="1">
+            <tr>
+                <th>Team</th>
+                <th>Rank</th>
+                <th>Official Score</th>
+                <th>Eval (AUC)</th>
+                <th>Test (AUC)</th>
+            </tr>
+            <tr>
+                <td>TCLAB</td>
+                <td>1</td>
+                <td>94.04</td>
+                <td>93.53</td>
+                <td>94.26</td>
+            </tr>
+            <tr>
+                <td>Droneomaly Hunters</td>
+                <td>2</td>
+                <td>92.8</td>
+                <td>82.69</td>
+                <td>92.85</td>
+            </tr>
+            <tr>
+                <td>NUS</td>
+                <td>3</td>
+                <td>79.43</td>
+                <td>78.53</td>
+                <td>79.81</td>
+            </tr>
+            <tr>
+                <td>Baseline</td>
+                <td>4</td>
+                <td>59.56</td>
+                <td>59.84</td>
+                <td>59.44</td>
+            </tr>
+            <tr>
+                <td>一发出隐</td>
+                <td>5</td>
+                <td>49.63</td>
+                <td>47.97</td>
+                <td>50.34</td>
+            </tr>
+        </table>
+    </section>
+    
+    <section>
         <h2>&#128227; Key dates</h2>
         <table border="1" style="width: 80%; margin: auto;">
             <tr>
