--- a/index.html
+++ b/index.html
@@ -203,21 +203,7 @@
     <div class="popup-overlay" id="schedulePopup">
     <div class="popup-content">
         <span class="popup-close" onclick="closePopup()">&times;</span>
-        <h3>&#128227; The Challenge Deadline Has Been Extended!</h3>
-        <table border="1" style="width: 90%; margin: auto;">
-            <tr>
-                <th>Event</th>
-                <th>Date</th>
-            </tr>
-            <tr>
-                <td>Final submission (Anomaly score, trained model, technical report)</td>
-                <td>4 June 2025</td>
-            </tr>
-            <tr>
-                <td>Competition result announcement</td>
-                <td>11 June 2025</td>
-            </tr>
-        </table>
+        <h3>&#128227; The Challenge Results Have Been Announced!</h3>
     </div>
 </div>
     <header>
@@ -234,7 +220,7 @@
         <h2>&#128227; Challenge Results</h2>
     
         <h3>Total Results</h3>
-        <table style="width: 80%; margin: auto; border-collapse: collapse;" border="1">
+        <table style="width: 70%; margin: auto; border-collapse: collapse;" border="1">
             <tr>
                 <th>Rank</th>
                 <th>Team</th>
@@ -280,7 +266,7 @@
         </table>
 
         <h3>Evaluation Results (AUC)</h3>
-        <table style="width: 90%; margin: auto; border-collapse: collapse;" border="1">
+        <table style="width: 80%; margin: auto; border-collapse: collapse;" border="1">
             <tr>
                 <th>Rank</th>
                 <th>Team</th>
@@ -332,20 +318,20 @@
         </table>
 
         <h3>Test Results (AUC)</h3>
-        <table style="width: 95%; margin: auto; border-collapse: collapse;" border="1">
+        <table style="width: 100%; margin: auto; border-collapse: collapse;" border="1">
             <tr>
                 <th>Rank</th>
                 <th>Team</th>
-                <th>Drone A, Seen</th>
-                <th>Drone A, Unseen</th>
-                <th>Drone A, All</th>
-                <th>Drone B, Seen</th>
-                <th>Drone B, Unseen</th>
-                <th>Drone B, All</th>
-                <th>Drone C, Seen</th>
-                <th>Drone C, Unseen</th>
-                <th>Drone C, All</th>
-                <th>Total</th>
+                <th style="width: 8%;">Drone A, Seen</th>
+                <th style="width: 8%;">Drone A, Unseen</th>
+                <th style="width: 8%;">Drone A, All</th>
+                <th style="width: 8%;">Drone B, Seen</th>
+                <th style="width: 8%;">Drone B, Unseen</th>
+                <th style="width: 8%;">Drone B, All</th>
+                <th style="width: 8%;">Drone C, Seen</th>
+                <th style="width: 8%;">Drone C, Unseen</th>
+                <th style="width: 8%;">Drone C, All</th>
+                <th style="width: 8%;">Total</th>
             </tr>
             <tr>
                 <td>1</td>
