--- a/index.html
+++ b/index.html
@@ -322,16 +322,16 @@
             <tr>
                 <th>Rank</th>
                 <th>Team</th>
-                <th style="width: 9%;">Drone A, Seen</th>
-                <th style="width: 9%;">Drone A, Unseen</th>
-                <th style="width: 9%;">Drone A, All</th>
-                <th style="width: 9%;">Drone B, Seen</th>
-                <th style="width: 9%;">Drone B, Unseen</th>
-                <th style="width: 9%;">Drone B, All</th>
-                <th style="width: 9%;">Drone C, Seen</th>
-                <th style="width: 9%;">Drone C, Unseen</th>
-                <th style="width: 9%;">Drone C, All</th>
-                <th style="width: 7%;">Total</th>
+                <th>Drone A, Seen</th>
+                <th>Drone A, Unseen</th>
+                <th>Drone A, All</th>
+                <th>Drone B, Seen</th>
+                <th>Drone B, Unseen</th>
+                <th>Drone B, All</th>
+                <th>Drone C, Seen</th>
+                <th>Drone C, Unseen</th>
+                <th>Drone C, All</th>
+                <th>Total</th>
             </tr>
             <tr>
                 <td>1</td>
