--- a/index.html
+++ b/index.html
@@ -449,6 +449,7 @@
         <h2>2. Dataset</h2>
         <p>Dataset for ICSV31 AI Challenge: <a href="https://drive.google.com/file/d/1BK-dpXG68gTmwA68JbbDW10AlaVRMYJU/view?usp=sharing">download</a></p>
         <p>Test Dataset for ICSV31 AI Challenge: <a href="https://drive.google.com/file/d/1veguvvaMPhcwwNr1vKE9QPiZkmK-i_5N/view?usp=sharing">download</a></p>
+        <p>Test labels for ICSV31 AI Challenge: <a href="https://drive.google.com/file/d/1jsOcfb_k4XnDPfegJha_j-5TJC4dws4N/view?usp=sharing">download</a></p>
         <p>This ICSV31 AI Challenge dataset is based on the <a href="https://arxiv.org/abs/2304.11708">drone noise data</a>, originally constructed by Wonjun Yi, Jung-Woo Choi, Jae-Woo Lee for the drone fault classification task.<br>
         (W. Yi, J-W. Choi., J-W. Lee, "Sound-based drone fault classification using multi-task learning", Proceedings of the 29th International Congress on Sound and Vibration (ICSV 29), Prague, Czech Republic, July. 2023.)</p>
         <p>The previous dataset was significantly modified for this specific challenge.</p>
